8014431: cleanup warnings indicated by the -Wunused-value compiler option on linux

Co-authored-by: Jeremy Manson <jeremymanson@google.com>
Reviewed-by: dholmes, coleenp